3º_TL/Sesion7/expresiones.output
Terminals unused in grammar

    '^'


Grammar

    0 $accept: entrada $end

    1 entrada: ε
    2        | entrada linea

    3 linea: expr '\n'
    4      | SALIR '\n'
    5      | ID '=' expr '\n'
    6      | error '\n'

    7 expr: ENTERO
    8     | REAL
    9     | expr '+' expr
   10     | expr '-' expr
   11     | expr '*' expr
   12     | expr '/' expr
   13     | expr '%' expr
   14     | '-' expr
   15     | '(' expr ')'


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 3 4 5 6
    '%' (37) 13
    '(' (40) 15
    ')' (41) 15
    '*' (42) 11
    '+' (43) 9
    '-' (45) 10 14
    '/' (47) 12
    '=' (61) 5
    '^' (94)
    error (256) 6
    SALIR (258) 4
    ENTERO <c_entero> (259) 7
    REAL <c_real> (260) 8
    ID <var> (261) 5
    menos (262)


Nonterminals, with rules where they appear

    $accept (18)
        on left: 0
    entrada (19)
        on left: 1 2
        on right: 0 2
    linea (20)
        on left: 3 4 5 6
        on right: 2
    expr <c_expresion> (21)
        on left: 7 8 9 10 11 12 13 14 15
        on right: 3 5 9 10 11 12 13 14 15


State 0

    0 $accept: • entrada $end

    $default  reduce using rule 1 (entrada)

    entrada  go to state 1


State 1

    0 $accept: entrada • $end
    2 entrada: entrada • linea

    $end    shift, and go to state 2
    error   shift, and go to state 3
    SALIR   shift, and go to state 4
    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    ID      shift, and go to state 7
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    linea  go to state 10
    expr   go to state 11


State 2

    0 $accept: entrada $end •

    $default  accept


State 3

    6 linea: error • '\n'

    '\n'  shift, and go to state 12


State 4

    4 linea: SALIR • '\n'

    '\n'  shift, and go to state 13


State 5

    7 expr: ENTERO •

    $default  reduce using rule 7 (expr)


State 6

    8 expr: REAL •

    $default  reduce using rule 8 (expr)


State 7

    5 linea: ID • '=' expr '\n'

    '='  shift, and go to state 14


State 8

   14 expr: '-' • expr

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 15


State 9

   15 expr: '(' • expr ')'

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 16


State 10

    2 entrada: entrada linea •

    $default  reduce using rule 2 (entrada)


State 11

    3 linea: expr • '\n'
    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '*'   shift, and go to state 19
    '/'   shift, and go to state 20
    '%'   shift, and go to state 21
    '\n'  shift, and go to state 22


State 12

    6 linea: error '\n' •

    $default  reduce using rule 6 (linea)


State 13

    4 linea: SALIR '\n' •

    $default  reduce using rule 4 (linea)


State 14

    5 linea: ID '=' • expr '\n'

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 23


State 15

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr
   14     | '-' expr •

    $default  reduce using rule 14 (expr)


State 16

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr
   15     | '(' expr • ')'

    '+'  shift, and go to state 17
    '-'  shift, and go to state 18
    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    '%'  shift, and go to state 21
    ')'  shift, and go to state 24


State 17

    9 expr: expr '+' • expr

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 25


State 18

   10 expr: expr '-' • expr

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 26


State 19

   11 expr: expr '*' • expr

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 27


State 20

   12 expr: expr '/' • expr

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 28


State 21

   13 expr: expr '%' • expr

    ENTERO  shift, and go to state 5
    REAL    shift, and go to state 6
    '-'     shift, and go to state 8
    '('     shift, and go to state 9

    expr  go to state 29


State 22

    3 linea: expr '\n' •

    $default  reduce using rule 3 (linea)


State 23

    5 linea: ID '=' expr • '\n'
    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr

    '+'   shift, and go to state 17
    '-'   shift, and go to state 18
    '*'   shift, and go to state 19
    '/'   shift, and go to state 20
    '%'   shift, and go to state 21
    '\n'  shift, and go to state 30


State 24

   15 expr: '(' expr ')' •

    $default  reduce using rule 15 (expr)


State 25

    9 expr: expr • '+' expr
    9     | expr '+' expr •
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    '%'  shift, and go to state 21

    $default  reduce using rule 9 (expr)


State 26

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   10     | expr '-' expr •
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr

    '*'  shift, and go to state 19
    '/'  shift, and go to state 20
    '%'  shift, and go to state 21

    $default  reduce using rule 10 (expr)


State 27

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   11     | expr '*' expr •
   12     | expr • '/' expr
   13     | expr • '%' expr

    $default  reduce using rule 11 (expr)


State 28

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   12     | expr '/' expr •
   13     | expr • '%' expr

    $default  reduce using rule 12 (expr)


State 29

    9 expr: expr • '+' expr
   10     | expr • '-' expr
   11     | expr • '*' expr
   12     | expr • '/' expr
   13     | expr • '%' expr
   13     | expr '%' expr •

    $default  reduce using rule 13 (expr)


State 30

    5 linea: ID '=' expr '\n' •

    $default  reduce using rule 5 (linea)
